SCIP version NEXT
=================

features:
- added macros to do computations with a higher precision by using double double arithmetic
- new compiler flag DEBUGSOL={true,false} to enable an internal debugging mechanism to check against a user given debug solution
- add new heuristic MPEC that solves a MPEC reformulation of a mixed-binary nonlinear problem by regularized NLP reformulations
- added interface to the NLP solver WORHP; set WORHP=true in order to link to WORHP
- added interface to the NLP solver FilterSQP; set FILTERSQP=true in order to link to FilterSQP

parameters:
- new parameter misc/debugsol to specify a debug solution that should be checked during the solve
- fixed typo: heuristics/completesol/maxunkownrate has changed to heuristics/completesol/maxunknownrate
- new parameters: beforepresol, maxlpiter, and maxcontvars in heur_completesol.c
- new parameter: lp/refactorinterval to change the refactorization interval of the LP solver

interface:
- new interface methods SCIPcreateRandom, SCIPfreeRandom that replace SCIPrandomCreate and SCIPrandomFree
  in the public SCIP API.
- new interface method SCIPsetRandomSeed to (re)set a random number generator seed
- added method SCIPsetProbingLPState() to install given LP state and/or norms at the current probing node
- added functions SCIPbranchcandGetLPMaxPrio() and SCIPbranchcandGetExternMaxPrio() get the maximal branching priority of given
  branching candidates; also added SCIPbranchcandGetNPrioLPCands() to access the number of LP candidates with this priority.

performance improvements:
- add and use RESTRICT macro for some pointers
- improved the implementation of SCIPvarGetActiveRepresentatives

SCIP version 4.0.1
==================

features
- added parsing functionality to cardinality constraint handler for CIP format
- added command line option '-o' and command 'validatesolve' in interactive shell
  to validate the solution against an external primal and dual reference value.