@@ -250,7 +250,7 @@ struct SCIP_Uf
 {
    int*                  parents;            /**< array to store the parent node index for every vertex */
    int*                  sizes;              /**< array to store the size of the subtree rooted at each vertex */
-   int                   size;             /**< the number of vertices in the graph */
+   int                   size;               /**< the number of vertices in the graph */
    int                   componentcount;     /**< counter for the number of connected components of the graph */
 };
 
