@@ -244,8 +244,6 @@ struct SCIP_Var
    SCIP_HISTORY*         historycrun;        /**< branching and inference history information for current run */
    SCIP_VALUEHISTORY*    valuehistory;       /**< branching and inference history information which are value based, or NULL if not used */
    SCIP_Longint          closestvblpcount;   /**< LP count for which the closestvlbidx/closestvubidx entries are valid */
-   int                   clqcomponentidx;    /**< index of clique graph's connected component that the variable belongs to,
-                                              *   or -1 if not computed */
    int                   index;              /**< consecutively numbered variable identifier */
    int                   probindex;          /**< array position in problems vars array, or -1 if not assigned to a problem */
    int                   pseudocandindex;    /**< array position in pseudo branching candidates array, or -1 */
