@@ -1648,13 +1648,6 @@ SCIP_RETCODE SCIPvarRemoveCliquesImplicsVbs(
    SCIP_Bool             removefromvar       /**< should the implications and variable bounds be removed from the var itself? */
    );
 
-/** sets the index of the connected component of the clique graph that the variable belongs to, or -1 if not computed */
-extern
-void SCIPvarSetCliqueComponentIdx(
-   SCIP_VAR*             var,                /**< problem variable */
-   int                   idx                 /**< clique component index of this variable */
-   );
-
 #ifdef NDEBUG
 
 /* In optimized mode, the function calls are overwritten by defines to reduce the number of function calls and
